# Qt-Cpp-Calc

./: .gitignore  CEditor.cpp  CEditor.hpp  CMakeLists.txt  CMyObject.cpp  CMyObject.hpp  Main.cpp  Main.hpp  README.md  main.cpp
